--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
             autoplay: true, 
             autoplaySpeed: 300 
         });
-    </script></script>
+    </script>
+    </script>
         <img class="bedroom-image" src="https://source.unsplash.com/600x400/?hotel" alt="Broadway in">
 
         <h1>Broadway Inn</h1>
